basic design system updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--=============== DESCRIPTION ===============-->
     <meta name="description" 
-    content="This is a web page, for a space tourism service practise">
+    content="This is a static web page, for a space tourism service practise">
     <!--=============== FAVICON ===============-->
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
     <title>Space Tourism</title>
