--- a/index.html
+++ b/index.html
@@ -13,41 +13,46 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
-<body>
+<body class="home">
     <!--=============== HEADER ===============-->
-    <header class="header-primary">
-        <div></div>
+    <header class="primary-header flex">
+        <div>
+            <img src="./assets/img/shared/logo.svg" alt="space tourism logo" class="primary-logo">
+        </div>
+
+        <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle">
+            <span class="sr-only">Menu</span>
+        </button>
         <!--=============== NAV ===============-->
         <nav>
-            <ul class="primary-navigation underline-indicators flex">
+            <ul class="primary-navigation flex" id="primary-navigation" data-visible="false">
                 <li class="active">
-                    <a class="uppercase text-white letter-spacing-2" href="#"><span>00</span>Home</a>
+                    <a href="index.html">
+                        <span aria-hidden="true">00</span>Home
+                    </a>
                 </li>
                 <li>
-                    <a class="uppercase text-white letter-spacing-2" href="#"><span>01</span>Destination</a>
+                    <a href="destination.html">
+                        <span aria-hidden="true">01</span>Destination
+                    </a>
                 </li>
                 <li>
-                    <a class="uppercase text-white letter-spacing-2" href="#"><span>02</span>Crew</a>
+                    <a href="crew.html">
+                        <span aria-hidden="true">02</span>Crew
+                    </a>
                 </li>
                 <li>
-                    <a class="uppercase text-white letter-spacing-2" href="#"><span>03</span>Technology</a>
+                    <a href="technology.html">
+                        <span aria-hidden="true">03</span>Technology
+                    </a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    So, you want to travel to
-    Space
-    Let’s face it; if you want to go to space, you might as well genuinely go to 
-    outer space and not hover kind of on the edge of it. Well sit back, and relax 
-    because we’ll give you a truly out of this world experience!
-
-    Explore
-
-
-
-
     <!--=============== MAIN JS ===============-->
     <script src="./assets/script/main.js"></script>
+    <!--=============== NAVBAR JS ===============-->
+    <script src="./assets/script/navbar.js"></script>
 </body>
 </html>
