--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
         <nav>
             <ul class="primary-navigation flex" id="primary-navigation" data-visible="false">
                 <li class="active">
-                    <a href="index.html">
+                    <a href="index.html" class="primary-nav-link">
                         <span aria-hidden="true">00</span>Home
                     </a>
                 </li>
                 <li>
-                    <a href="destination.html">
+                    <a href="destination.html" class="primary-nav-link">
                         <span aria-hidden="true">01</span>Destination
                     </a>
                 </li>
                 <li>
-                    <a href="crew.html">
+                    <a href="crew.html" class="primary-nav-link">
                         <span aria-hidden="true">02</span>Crew
                     </a>
                 </li>
                 <li>
-                    <a href="technology.html">
+                    <a href="technology.html" class="primary-nav-link">
                         <span aria-hidden="true">03</span>Technology
                     </a>
                 </li>
