--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!--=============== HEADER ===============-->
     <header class="primary-header flex">
         <div>
-            <img src="./assets/img/shared/logo.svg" alt="space tourism logo" class="primary-logo">
+            <a href="./index.html">
+                <img src="./assets/img/shared/logo.svg" alt="space tourism logo" class="primary-logo">
+            </a>
         </div>
 
         <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle">
@@ -32,17 +34,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="destination.html" class="primary-nav-link">
+                    <a href="./assets/html/destination-moon.html" class="primary-nav-link">
                         <span aria-hidden="true">01</span>Destination
                     </a>
                 </li>
                 <li>
-                    <a href="crew.html" class="primary-nav-link">
+                    <a href="./assets/html/crew-commander.html" class="primary-nav-link">
                         <span aria-hidden="true">02</span>Crew
                     </a>
                 </li>
                 <li>
-                    <a href="technology.html" class="primary-nav-link">
+                    <a href="./assets/html/technology-spaceport.html" class="primary-nav-link">
                         <span aria-hidden="true">03</span>Technology
                     </a>
                 </li>
@@ -50,8 +52,27 @@
         </nav>
     </header>
 
-    <!--=============== MAIN JS ===============-->
-    <script src="./assets/script/main.js"></script>
+    <!--=============== MAIN ===============-->
+    <main class="main">
+        <!--=============== PRIMARY-HOME ===============-->
+        <section class="primary section">
+            <div class="primary-container">
+
+                <div class="primary-container-data">
+                    <p class="primary-subheading">So, you want to travel to</p>
+                    <h1 class="primary-title">Space</h1>
+                    <p class="primary-description">Let’s face it; if you want to go to space, you might as well genuinely go to outer space 
+                        and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you 
+                        a truly out of this world experience!
+                    </p>
+                </div>
+
+                <div class="primary-button-container">
+                    <button class="primary-button">Explore</button>
+                </div>
+            </div>
+        </section>
+    </main>
     <!--=============== NAVBAR JS ===============-->
     <script src="./assets/script/navbar.js"></script>
 </body>
