--- a/assets/html/destination-moon.html
+++ b/assets/html/destination-moon.html
@@ -53,16 +53,16 @@
     <!--=============== MAIN ===============-->
     <main class="main">
         <!--=============== DESTINATION - MOON ===============-->
-        <section class="destination section">
-            <div class="destination-container">
-                <h2 class="destination-subheading"> <span class="destination-subheading-number">01</span> Pick your destination</h2>
+        <section class="section">
+            <h2 class="destination-subheading"> <span class="destination-subheading-number">01</span>Pick your destination</h2>
 
+            <div class="destination-container">
                 <div class="destination-information">
                     <img src="../img/destination/image-moon.png" alt="moon" class="destination-img">
 
                     <div class="destination-data">
                         <ul class="destination-navigation flex">
-                            <li>
+                            <li class="active_link">
                                 <a href="../html/destination-moon.html" class="destination-nav-link">Moon</a>
                             </li>
                             <li>
