--- a/assets/html/destination-europa.html
+++ b/assets/html/destination-europa.html
@@ -53,10 +53,10 @@
     <!--=============== MAIN ===============-->
     <main class="main">
         <!--=============== DESTINATION - EUROPA ===============-->
-        <section class="destination section">
-            <div class="destination-container">
-                <h2 class="destination-subheading"><span class="destination-subheading-number">01</span> Pick your destination</h2>
+        <section class="section">
+            <h2 class="destination-subheading"><span class="destination-subheading-number">01</span>Pick your destination</h2>
 
+            <div class="destination-container">    
                 <div class="destination-information">
                     <img src="../img/destination/image-europa.png" alt="europa" class="destination-img">
 
