--- a/assets/html/destination-mars.html
+++ b/assets/html/destination-mars.html
@@ -53,10 +53,10 @@
     <!--=============== MAIN ===============-->
     <main class="main">
         <!--=============== DESTINATION - MARS ===============-->
-        <section class="destination section">
-            <div class="destination-container">
-                <h2 class="destination-subheading"><span class="destination-subheading-number">01</span> Pick your destination</h2>
+        <section class="section">
+            <h2 class="destination-subheading"><span class="destination-subheading-number">01</span>Pick your destination</h2>
 
+            <div class="destination-container">
                 <div class="destination-information">
                     <img src="../img/destination/image-mars.png" alt="mars" class="destination-img">
 
