--- a/assets/html/destination-europa.html
+++ b/assets/html/destination-europa.html
@@ -26,23 +26,23 @@
         <!--=============== NAV ===============-->
         <nav>
             <ul class="primary-navigation flex" id="primary-navigation" data-visible="false">
-                <li class="active">
+                <li class="primary-nav-item">
                     <a href="../../index.html" class="primary-nav-link">
                         <span aria-hidden="true">00</span>Home
                     </a>
                 </li>
-                <li>
+                <li class="primary-nav-item primary-active">
                     <a href="../html/destination-moon.html" class="primary-nav-link">
                         <span aria-hidden="true">01</span>Destination
                     </a>
                 </li>
-                <li>
+                <li class="primary-nav-item">
                     <a href="../html/crew-commander.html" class="primary-nav-link">
                         <span aria-hidden="true">02</span>Crew
                     </a>
                 </li>
-                <li>
-                    <a href="../html/technology-spaceport.html" class="primary-nav-link">
+                <li class="primary-nav-item">
+                    <a href="../html/technology-vehicle.html" class="primary-nav-link">
                         <span aria-hidden="true">03</span>Technology
                     </a>
                 </li>
@@ -54,6 +54,8 @@
     <main class="main">
         <!--=============== DESTINATION - EUROPA ===============-->
         <section class="section">
+            <img src="../img/destination/background-destination-mobile.jpg" alt="space background" class="destination-bg">
+
             <h2 class="destination-subheading"><span class="destination-subheading-number">01</span>Pick your destination</h2>
 
             <div class="destination-container">    
@@ -69,7 +71,7 @@
                                 <a href="../html/destination-mars.html" class="destination-nav-link">Mars</a>
                             </li>
                             <li>
-                                <a href="../html/destination-europa.html" class="destination-nav-link">Europa</a>
+                                <a href="../html/destination-europa.html" class="destination-nav-link destination-active">Europa</a>
                             </li>
                             <li>
                                 <a href="../html/destination-titan.html" class="destination-nav-link">Titan</a>
