--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--=============== DESCRIPTION ===============-->
-    <meta name="description" 
-    content="This is a static web page, for a space tourism service practise">
+    <meta name="description" content="This is a static web page, for a space tourism service practise">
     <!--=============== FAVICON ===============-->
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
     <title>Space Tourism</title>
@@ -28,22 +27,22 @@
         <!--=============== NAV ===============-->
         <nav>
             <ul class="primary-navigation flex" id="primary-navigation" data-visible="false">
-                <li class="active">
+                <li class="primary-nav-item primary-active">
                     <a href="index.html" class="primary-nav-link">
                         <span aria-hidden="true">00</span>Home
                     </a>
                 </li>
-                <li>
+                <li class="primary-nav-item">
                     <a href="./assets/html/destination-moon.html" class="primary-nav-link">
                         <span aria-hidden="true">01</span>Destination
                     </a>
                 </li>
-                <li>
+                <li class="primary-nav-item">
                     <a href="./assets/html/crew-commander.html" class="primary-nav-link">
                         <span aria-hidden="true">02</span>Crew
                     </a>
                 </li>
-                <li>
+                <li class="primary-nav-item">
                     <a href="./assets/html/technology-spaceport.html" class="primary-nav-link">
                         <span aria-hidden="true">03</span>Technology
                     </a>
@@ -56,6 +55,7 @@
     <main class="main">
         <!--=============== PRIMARY-HOME ===============-->
         <section class="primary section">
+            <img src="./assets/img/home/background-home-mobile.jpg" alt="space background" class="primary-bg">
             <div class="primary-container">
 
                 <div class="primary-container-data">
