--- a/assets/html/crew-pilot.html
+++ b/assets/html/crew-pilot.html
@@ -26,23 +26,23 @@
         <!--=============== NAV ===============-->
         <nav>
             <ul class="primary-navigation flex" id="primary-navigation" data-visible="false">
-                <li class="active">
+                <li class="primary-nav-item">
                     <a href="../../index.html" class="primary-nav-link">
                         <span aria-hidden="true">00</span>Home
                     </a>
                 </li>
-                <li>
+                <li class="primary-nav-item">
                     <a href="../html/destination-moon.html" class="primary-nav-link">
                         <span aria-hidden="true">01</span>Destination
                     </a>
                 </li>
-                <li>
+                <li class="primary-nav-item primary-active">
                     <a href="../html/crew-commander.html" class="primary-nav-link">
                         <span aria-hidden="true">02</span>Crew
                     </a>
                 </li>
-                <li>
-                    <a href="../html/technology-spaceport.html" class="primary-nav-link">
+                <li class="primary-nav-item">
+                    <a href="../html/technology-vehicle.html" class="primary-nav-link">
                         <span aria-hidden="true">03</span>Technology
                     </a>
                 </li>
@@ -54,6 +54,8 @@
     <main class="main">
         <!--=============== CREW ===============-->
         <section class="section">
+            <img src="../img/crew/background-crew-mobile.jpg" alt="space background" class="crew-bg">
+
             <h2 class="crew-subheading"> <span class="crew-subheading-number">02</span>Meet your crew</h2>
 
             <div class="crew-container">                
