--- a/assets/html/technology-spaceport.html
+++ b/assets/html/technology-spaceport.html
@@ -1,32 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--=============== DESCRIPTION ===============-->
+    <meta name="description" content="This is a static web page, for a space tourism service practise">
+    <!--=============== FAVICON ===============-->
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <title>Space Tourism - Technology</title>
+    <!--=============== CSS ===============-->
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
+<body class="technology">
+    <!--=============== HEADER ===============-->
+    <header class="primary-header flex">
+        <div>
+            <a href="../../index.html">
+                <img src="../img/shared/logo.svg" alt="space tourism logo" class="primary-logo">
+            </a>
+        </div>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+        <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav-toggle">
+            <span class="sr-only">Menu</span>
+        </button>
+        <!--=============== NAV ===============-->
+        <nav>
+            <ul class="primary-navigation flex" id="primary-navigation" data-visible="false">
+                <li class="primary-nav-item">
+                    <a href="../../index.html" class="primary-nav-link">
+                        <span aria-hidden="true">00</span>Home
+                    </a>
+                </li>
+                <li class="primary-nav-item">
+                    <a href="../html/destination-moon.html" class="primary-nav-link">
+                        <span aria-hidden="true">01</span>Destination
+                    </a>
+                </li>
+                <li class="primary-nav-item">
+                    <a href="../html/crew-commander.html" class="primary-nav-link">
+                        <span aria-hidden="true">02</span>Crew
+                    </a>
+                </li>
+                <li class="primary-nav-item primary-active">
+                    <a href="../html/technology-vehicle.html" class="primary-nav-link">
+                        <span aria-hidden="true">03</span>Technology
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-  03 Space launch 101
+    <!--=============== MAIN ===============-->
+    <main class="main">
+        <!--=============== TECHNOLOGY - SPACEPORT ===============-->
+        <section class="technology section">
+            <img src="../img/technology/background-technology-mobile.jpg" alt="space background" class="technology-bg">
 
-  1
-  2
-  3
+            <h2 class="technology-subheading"><span class="technology-subheading-number">03</span>Space launch 101</h2>
 
-  The terminology...
-  Spaceport
+            <div class="technology-container">
+                <img src="../img/technology/image-spaceport-landscape.jpg" alt="spaceport" class="technology-img">
 
-  A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, 
-  by analogy to the seaport for ships or airport for aircraft. Based in the 
-  famous Cape Canaveral, our spaceport is ideally situated to take advantage 
-  of the Earth’s rotation for launch.
+                <div class="technology-numbers-container">
+                    <a href="../html/technology-vehicle.html" class="technology-numbers-circle">1</a>
+                    <a href="../html/technology-spaceport.html" class="technology-numbers-circle technology-active">2</a>
+                    <a href="../html/technology-capsule.html" class="technology-numbers-circle">3</a>
+                </div>
+
+                <div class="technology-info">
+                    <p class="technology-terminology">The terminology...</p>
+                    <h3 class="technology-title">Spaceport</h3>
+                    <p class="technology-description">A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, 
+                        by analogy to the seaport for ships or airport for aircraft. Based in the 
+                        famous Cape Canaveral, our spaceport is ideally situated to take advantage 
+                        of the Earth's rotation for launch.
+                    </p>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+    <!--=============== NAVBAR JS ===============-->
+    <script src="../script/navbar.js"></script>
 </body>
 </html>
